--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
+    "libphonenumber-js": "^1.12.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
