--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.11.0",
     "daisyui": "^5.0.50",
     "libphonenumber-js": "^1.12.12",
+    "lucide": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
